@@ -101,6 +101,13 @@ g_object_connect (G_OBJECT (greeter), "quit", G_CALLBACK (quit_cb), NULL);
 
 @ldmgreeter: the object which received the signal.
 
+<!-- ##### SIGNAL LdmGreeter::session-failed ##### -->
+<para>
+
+</para>
+
+@ldmgreeter: the object which received the signal.
+
 <!-- ##### SIGNAL LdmGreeter::show-message ##### -->
 <para>
 
