@@ -26,7 +26,8 @@ typedef enum
     GREETER_MESSAGE_CONNECTED               = 101,
     GREETER_MESSAGE_QUIT                    = 102,
     GREETER_MESSAGE_PROMPT_AUTHENTICATION   = 103,
-    GREETER_MESSAGE_END_AUTHENTICATION      = 104
+    GREETER_MESSAGE_END_AUTHENTICATION      = 104,
+    GREETER_MESSAGE_SESSION_FAILED          = 105
 } GreeterMessage;
 
 #endif /* _GREETER_PROTOCOL_H_ */
