@@ -59,6 +59,7 @@ struct _LdmGreeterClass
     void (*show_prompt)(LdmGreeter *greeter, const gchar *text, LdmPromptType type);
     void (*show_message)(LdmGreeter *greeter, const gchar *text, LdmMessageType type);
     void (*authentication_complete)(LdmGreeter *greeter);
+    void (*session_failed)(LdmGreeter *greeter);
     void (*timed_login)(LdmGreeter *greeter, const gchar *username);
     void (*user_added)(LdmGreeter *greeter, LdmUser *user);
     void (*user_changed)(LdmGreeter *greeter, LdmUser *user);
