@@ -17,7 +17,8 @@ GREETER CONNECTED-TO-DAEMON
 
 # Login as guest
 GREETER LOGIN-GUEST
-GREETER AUTHENTICATION-COMPLETE AUTHENTICATED=FALSE
+GREETER AUTHENTICATION-COMPLETE AUTHENTICATED=TRUE
+GREETER SESSION-FAILED
 
 # Cleanup
 *STOP-DAEMON
