@@ -18,9 +18,13 @@ GREETER CONNECTED-TO-DAEMON
 # Login as guest
 GREETER LOGIN-GUEST
 GREETER AUTHENTICATION-COMPLETE AUTHENTICATED=TRUE
-
-# Greeter quits, guest session starts
 GREETER QUIT
+
+# X server resets
+XSERVER :50 DISCONNECT-CLIENTS
+XSERVER :50 INDICATE-READY
+
+# Guest session starts
 SESSION START USER=guest
 XSERVER :50 ACCEPT-CONNECT
 SESSION CONNECT-XSERVER
