@@ -22,6 +22,10 @@ GREETER RESPOND TEXT="password"
 GREETER AUTHENTICATION-COMPLETE AUTHENTICATED=TRUE
 GREETER QUIT
 
+# X server resets
+XSERVER :50 DISCONNECT-CLIENTS
+XSERVER :50 INDICATE-READY
+
 # Session starts
 SESSION START USER=alice
 XSERVER :50 ACCEPT-CONNECT
