@@ -114,6 +114,12 @@ authentication_complete_cb (LdmGreeter *greeter)
 }
 
 static void
+session_failed_cb (LdmGreeter *greeter)
+{
+    notify_status ("GREETER SESSION-FAILED");
+}
+
+static void
 quit_cb (LdmGreeter *greeter)
 {
     notify_status ("GREETER QUIT");
@@ -158,6 +164,7 @@ main (int argc, char **argv)
     g_signal_connect (greeter, "show-message", G_CALLBACK (show_message_cb), NULL);
     g_signal_connect (greeter, "show-prompt", G_CALLBACK (show_prompt_cb), NULL);
     g_signal_connect (greeter, "authentication-complete", G_CALLBACK (authentication_complete_cb), NULL);
+    g_signal_connect (greeter, "session-failed", G_CALLBACK (session_failed_cb), NULL);
     g_signal_connect (greeter, "quit", G_CALLBACK (quit_cb), NULL);
 
     notify_status ("GREETER CONNECT-TO-DAEMON");
